# ihpc

./: .gitignore  CMakeLists.txt  MPI_Fempois.cpp  MPI_Poisson.cpp  MPI_Poisson2.cpp  fractal_map.h  generate.py  ihpc.kdev4  main.cpp  scope_timer.h
exercise3/: generate.py
